VWDemo/force-app/main/default/objects/Product2/fields/Allows_subscription__c.field-meta.xml
<CustomField>
    <fullName>Allows_subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to determine if vehicle can have a subscription added to it.</description>
    <inlineHelpText>If checked, a subscription can be sold alongside the product.</inlineHelpText>
    <label>Allows subscription</label>
    <type>Checkbox</type>
</CustomField>