VWDemo/force-app/main/default/objects/Product2/fields/Engine_Power__c.field-meta.xml
<CustomField>
    <fullName>Engine_Power__c</fullName>
    <description>Measure of engine power. Unit of measure is Pferdestärke</description>
    <inlineHelpText>Unit of measure is PS</inlineHelpText>
    <label>Engine Power</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>560</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>