VWDemo/force-app/main/default/objects/Product2/fields/Vehicle_Weight__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Weight__c</fullName>
    <description>Field to store weight of vehicle. Unit of measure is tons</description>
    <inlineHelpText>Unit of measure is tons</inlineHelpText>
    <label>Vehicle Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>