VWDemo/force-app/main/default/objects/Product2/listViews/Vehicles.listView-meta.xml
<ListView>
    <fullName>Vehicles</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Engine_Power__c</columns>
    <columns>Vehicle_Weight__c</columns>
    <columns>Allows_subscription__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Vehicle</value>
    </filters>
    <label>Vehicles</label>
</ListView>